--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root{
     --color-black : #000000;
-    --color-blue : #a18ffd; 
+    --color-blue : #8E03FB; 
+    --color-white : #fff;
 }
 *{
     margin: 0;
@@ -10,6 +11,10 @@
 html{
     font-family: 'Roboto';
     font-size: 62.5%;
+}
+body{
+    height: 100%;
+    padding: 0 7rem;
 }
 ul{
     list-style: none;
@@ -22,18 +27,20 @@ a{
 
 .nav{
     width: 100%;
-    padding: 1.5rem 1rem;
+    height: 9rem;
+    margin-bottom: 6.9rem;
+    padding: 1.5rem 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .nav__list{
-    width: 65%;
+    width: 35%;
     display: flex;
     justify-content: space-around;
 }
 .list__item{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     cursor: pointer;
 }
 .item__link{
@@ -42,29 +49,51 @@ a{
 .nav__button{
     font-size: 1.6rem;
 }
-.header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.nav__img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.footer{
+    margin-top: 15.5rem;
+    background-color: var(--color-black);
+    color: var(--color-white);
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    padding: 1.5rem 0;
 }
 .button{
     background: var(--color-blue);
-    padding: 1rem;
+    padding: 1.5rem;
     border-radius: 1rem;
-    color: rgb(22, 22, 22);
+    color: var(--color-white);
+    font-weight: bold;
+    cursor: pointer;
+}
+.header{
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .header__content{
-    padding: 0 3rem;
+    max-width: 45%;
+}
+.header__img{
+    width: 40rem;
+    border-radius: 1rem;
 }
 .content__title{
-    font-size: 4.5rem;
+    font-size: 4.8rem;
     font-weight: 900;
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
 }
 .content__text{
-    font-size: 1.8rem;
+    font-size: 2.1rem;
     opacity: .8;
-    width: 70%;
+    width: 75%;
     margin-bottom: 5rem;
 }
 .content__button{
@@ -103,29 +132,42 @@ a{
     border-radius: 1rem;
 }
 .blog{
-    width: 50%;
+    width: 55%;
+    display: grid;
+    grid-template-areas: 
+    "a form"
+    "f form"
+    "f form"
+    "f b"
+    ;
+    grid-template-columns: 50% 2fr;
     margin: 0 auto;
-    margin-top: 2.5rem;
     text-align: center;
 }
 .blog__title{
+    grid-area: a;
     font-size: 3rem;
+    margin-bottom: 4rem;
 }
 .blog__img{
+    grid-area: f;
     display: inline-block;
-    width: 20rem;
-    height: 20rem;
-    margin-top: 2rem;
+    width: 25rem;
+    height: 25rem;
+    margin: 0 auto;
     background: #a18ffd;
     border: none;
     border-radius: 1rem;
 }
 .blog__text{
+    grid-area: form;
     font-size: 1.8rem;
     opacity: .8;
-    margin-top: 3rem;
     text-align: justify;
-    margin-bottom: 4rem;
+}
+
+.form{
+    grid-area: form;
 }
 .inputs__container{
     display: grid;
@@ -156,7 +198,7 @@ a{
     font-size: 1.8rem;
 }
 .resultados{
-    margin-bottom: 20rem;
+    grid-area: b;
 }
 .resultados h3{
     margin-top: 2rem;
